--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -13,10 +14,10 @@
             <ul>
                 <li><a href="./index.html" target="_self">Studio</a></li>
                 <li><a href="./portfolio.html" target="_self">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address id="contacts">
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -24,52 +25,64 @@
         </address>
     </header>
     <main>
-        <ul>
-            <li><button type="button">All</button></li>
-            <li><button type="button">Web Site</button></li>
-            <li><button type="button">App</button></li>
-            <li><button type="button">Design</button></li>
-            <li><button type="button">Marketing</button></li>
-        </ul>
-        <ul>
-            <li>
-                <h2></h2>
-                <p></p>
-            </li>
-            <li>
-                <h2></h2>
-                <p></p>
-            </li>
-            <li>
-                <h2></h2>
-                <p></p>
-            </li>
-            <li>
-                <h2></h2>
-                <p></p>
-            </li>
-            <li>
-                <h2></h2>
-                <p></p>
-            </li>
-            <li>
-                <h2></h2>
-                <p></p>
-            </li>
-            <li>
-                <h2></h2>
-                <p></p>
-            </li>
-            <li>
-                <h2></h2>
-                <p></p>
-            </li>
-            <li>
-                <h2></h2>
-                <p></p>
-            </li>
-        </ul>
-
+        <section>
+            <!--Filter category-->
+            <ul>
+                <li><button type="button">All</button></li>
+                <li><button type="button">Web Site</button></li>
+                <li><button type="button">App</button></li>
+                <li><button type="button">Design</button></li>
+                <li><button type="button">Marketing</button></li>
+            </ul>
+            <!--Categories-->
+            <ul>
+                <li>
+                    <img src="./images/bankapp.jpg" alt="Banking app interface" width="360" height="300">
+                    <h2>Banking App Interface Concept</h2>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/cashpay.jpg" alt="Payment by phone" width="360" height="300">
+                    <h2>Cashless Payment</h2>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/maditapp.jpg" alt="Laptop and phone with Meditation App" width="360" height="300">
+                    <h2>Meditation App</h2>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/taxiserv.jpg" alt="Driver in the car" width="360" height="300">
+                    <h2>Taxi Service</h2>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/screenillust.jpg" alt=" Phone with screen illustrations" width="360" height="300">
+                    <h2>Screen Illustrations</h2>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/onlainecors.jpg" alt="Happy girl with phone" width="360" height="300">
+                    <h2>Online Courses</h2>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/instagstories.jpg" alt="Screens instagram srories" width="360" height="300">
+                    <h2>Instagram Stories Concept</h2>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/organfood.jpg" alt="Bag with organic food" width="360" height="300">
+                    <h2>Organic Food</h2>
+                    <p>Web Site</p>
+                </li>
+                <li>
+                    <img src="./images/coffee.jpg" alt="Cup of coffee" width="360" height="300">
+                    <h2>Fresh Coffee</h2>
+                    <p>Web Site</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
         <a href="./index.html">WebStudio</a>
