--- a/portfolio.html
+++ b/portfolio.html
@@ -5,88 +5,108 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="./index.html" target="_self">Studio</a></li>
-                <li><a href="./portfolio.html" target="_self">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+            <a class="logo link" href="./index.html">Web<span class="logo-studio link">Studio</span></a>
+            <ul class="list">
+                <li><a class="header-nav active" href="./index.html" target="_self">Studio</a></li>
+                <li><a class="header-nav active" href="./portfolio.html" target="_self">Portfolio</a></li>
+                <li><a class="header-nav active" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address id="contacts">
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address>
+            <ul class="list">
+                <li><a class="mail active" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="tel active" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
         <section>
+            <h1 style="display:none">Lorem ipsum dolor sit.</h1>
             <!--Filter category-->
-            <ul>
-                <li><button type="button">All</button></li>
-                <li><button type="button">Web Site</button></li>
-                <li><button type="button">App</button></li>
-                <li><button type="button">Design</button></li>
-                <li><button type="button">Marketing</button></li>
+            <ul class="list">
+                <li><button type="button" class="filt-btn btn-active">All</button></li>
+                <li><button type="button" class="filt-btn btn-active">Web Site</button></li>
+                <li><button type="button" class="filt-btn btn-active">App</button></li>
+                <li><button type="button" class="filt-btn btn-active">Design</button></li>
+                <li><button type="button" class="filt-btn btn-active">Marketing</button></li>
             </ul>
             <!--Categories-->
-            <ul>
+            <ul class="categories list">
                 <li>
-                    <img src="./images/bankapp.jpg" alt="Banking app interface" width="360" height="300">
-                    <h2>Banking App Interface Concept</h2>
-                    <p>App</p>
+                    <a class="category-link" href="">
+                        <img src="./images/bankapp.jpg" alt="Banking app interface" width="360" height="300">
+                        <h2 class="h-categ">Banking App Interface Concept</h2>
+                        <p class="category">App</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/cashpay.jpg" alt="Payment by phone" width="360" height="300">
-                    <h2>Cashless Payment</h2>
-                    <p>Marketing</p>
+                    <a class="category-link" href="">
+                        <img src="./images/cashpay.jpg" alt="Payment by phone" width="360" height="300">
+                        <h2 class="h-categ">Cashless Payment</h2>
+                        <p class="category">Marketing</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/maditapp.jpg" alt="Laptop and phone with Meditation App" width="360" height="300">
-                    <h2>Meditation App</h2>
-                    <p>App</p>
+                    <a class="category-link" href="">
+                        <img src="./images/maditapp.jpg" alt="Laptop and phone with Meditation App" width="360" height="300">
+                        <h2 class="h-categ">Meditation App</h2>
+                        <p class="category">App</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/taxiserv.jpg" alt="Driver in the car" width="360" height="300">
-                    <h2>Taxi Service</h2>
-                    <p>Marketing</p>
+                    <a class="category-link" href="">
+                        <img src="./images/taxiserv.jpg" alt="Driver in the car" width="360" height="300">
+                        <h2 class="h-categ">Taxi Service</h2>
+                        <p class="category">Marketing</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/screenillust.jpg" alt=" Phone with screen illustrations" width="360" height="300">
-                    <h2>Screen Illustrations</h2>
-                    <p>Design</p>
+                    <a class="category-link" href="">
+                        <img src="./images/screenillust.jpg" alt=" Phone with screen illustrations" width="360" height="300">
+                        <h2 class="h-categ">Screen Illustrations</h2>
+                        <p class="category">Design</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/onlainecors.jpg" alt="Happy girl with phone" width="360" height="300">
-                    <h2>Online Courses</h2>
-                    <p>Marketing</p>
+                    <a class="category-link" href="">
+                        <img src="./images/onlainecors.jpg" alt="Happy girl with phone" width="360" height="300">
+                        <h2 class="h-categ">Online Courses</h2>
+                        <p class="category">Marketing</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/instagstories.jpg" alt="Screens instagram srories" width="360" height="300">
-                    <h2>Instagram Stories Concept</h2>
-                    <p>Design</p>
+                    <a class="category-link" href="">
+                        <img src="./images/instagstories.jpg" alt="Screens instagram srories" width="360" height="300">
+                        <h2 class="h-categ">Instagram Stories Concept</h2>
+                        <p class="category">Design</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/organfood.jpg" alt="Bag with organic food" width="360" height="300">
-                    <h2>Organic Food</h2>
-                    <p>Web Site</p>
+                    <a class="category-link" href="">
+                        <img src="./images/organfood.jpg" alt="Bag with organic food" width="360" height="300">
+                        <h2 class="h-categ">Organic Food</h2>
+                        <p class="category">Web Site</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/coffee.jpg" alt="Cup of coffee" width="360" height="300">
-                    <h2>Fresh Coffee</h2>
-                    <p>Web Site</p>
+                    <a class="category-link" href="">
+                        <img src="./images/coffee.jpg" alt="Cup of coffee" width="360" height="300">
+                        <h2 class="h-categ">Fresh Coffee</h2>
+                        <p class="category">Web Site</p>
+                    </a>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a href="./index.html" class="logo link">Web<span class="logo-studio-foot link">Studio</span></a>
+        <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 </body>
 </html>
