--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -18,7 +20,7 @@
                 <li><a class="header-nav active" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="header-contact">
             <ul class="list">
                 <li><a class="mail active" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="tel active" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -33,23 +35,23 @@
     </section>
     <!--description of benefits-->
     <section>
-        <h2 style="display:none">Lorem, ipsum dolor.</h2>
+        <h2 style="display:none" class="h-future">Lorem, ipsum dolor.</h2>
         <ul class="list">
             <li>
                 <h3 class="h-categ">Strategy</h3>
-                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                <p class="text-benef">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
             </li>
             <li>
                 <h3 class="h-categ">Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <p class="text-benef">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li>
                 <h3 class="h-categ">Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <p class="text-benef">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
                 <h3 class="h-categ">Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <p class="text-benef">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
     </section>
