--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -18,7 +20,7 @@
                 <li><a class="header-nav active" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="header-contact">
             <ul class="list">
                 <li><a class="mail active" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="tel active" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
