--- a/index.html
+++ b/index.html
@@ -65,28 +65,28 @@
         </ul>
     </section>
     <!--Our Team-->
-    <section>
+    <section class="team">
         <h2 class="h-team">Our Team</h2>
         <ul class="list">
-            <li>
+            <li class="list-team">
                 <img src="./images/mark.jpg" alt="Photo Mark Guerrero" width="264" height="260">
                 <h3 class="h-categ">Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <p class="text-team">Product Designer</p>
             </li>
-            <li>
+            <li class="list-team">
                 <img src="./images/tom.jpg" alt="Photo Tom Ford" width="264" height="260">
                 <h3 class="h-categ">Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <p class="text-team">Frontend Developer</p>
             </li>
-            <li>
+            <li class="list-team">
                 <img src="./images/camila.jpg" alt="Photo Camila Garcia" width="264" height="260">
                 <h3 class="h-categ">Camila Garcia</h3>
-                <p>Marketing</p>
+                <p class="text-team">Marketing</p>
             </li>
-            <li>
+            <li class="list-team">
                 <img src="./images/daniel.jpg" alt="Photo Daniel Wilson" width="264" height="260">
                 <h3 class="h-categ">Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <p class="text-team">UI Designer</p>
             </li>
         </ul>
     </section>
