fix: it is crazy

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,17 +13,17 @@
 <body>
     <header>
         <nav>
-            <a class="logo link" href="./index.html">Web<span class="logo-studio link">Studio</span></a>
+            <a class="logo linkk" href="./index.html">Web<span class="logo-studio linkk">Studio</span></a>
             <ul class="list">
-                <li><a class="header-nav active" href="./index.html" target="_self">Studio</a></li>
-                <li><a class="header-nav active" href="./portfolio.html" target="_self">Portfolio</a></li>
-                <li><a class="header-nav active" href="">Contacts</a></li>
+                <li><a class="header-nav link" href="./index.html" target="_self">Studio</a></li>
+                <li><a class="header-nav link" href="./portfolio.html" target="_self">Portfolio</a></li>
+                <li><a class="header-nav link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="header-contact">
             <ul class="list">
-                <li><a class="mail active" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="tel active" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -107,7 +107,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="logo link">Web<span class="logo-studio-foot link">Studio</span></a>
+        <a href="./index.html" class="logo linkk">Web<span class="logo-studio-foot linkk">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 </body>
