--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 <body>
    <header>
         <nav>
-            <a class="logo linkk" href="./index.html">Web<span class="logo-studio linkk">Studio</span></a>
+            <a class="logo link linkk" href="./index.html">Web<span class="logo-studio link linkk">Studio</span></a>
             <ul class="list">
-                <li><a class="header-nav link" href="./index.html" target="_self">Studio</a></li>
-                <li><a class="header-nav link" href="./portfolio.html" target="_self">Portfolio</a></li>
-                <li><a class="header-nav link" href="">Contacts</a></li>
+                <li><a class="header-nav link active" href="./index.html" target="_self">Studio</a></li>
+                <li><a class="header-nav link active" href="./portfolio.html" target="_self">Portfolio</a></li>
+                <li><a class="header-nav link active" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="header-contact">
             <ul class="list">
-                <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="mail link active" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="tel link active" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
    </header>
@@ -92,7 +92,7 @@
     </section>
    </main>
    <footer class="footer">
-        <a href="./index.html" class="logo linkk">Web<span class="logo-studio-foot linkk">Studio</span></a>
+        <a href="./index.html" class="logo link linkk">Web<span class="logo-studio-foot link linkk">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 </body>
