--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </nav>
         <address class="header-contact">
             <ul class="list">
-                <li><a class="mail link active" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="tel link active" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="contact link active" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contact link active" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
    </header>
